# blog

./: README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: backend-ci.yml  ci.yml
backend/: .env  .gitignore  pyproject.toml
backend/app/: .env  config.py  main.py  pyproject.toml
backend/app/api/: users.py
backend/app/models/: user.py
backend/app/tests/: conftest.py  test_main.py
backend/src/: app.py  auth.py  config.py  main.py
backend/src/api/: posts.py  users.py
backend/src/models/: post.py  user.py
backend/tests/: conftest.py  test_main.py  utils.py
frontend/: README.md  index.html  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: BlogPost.vue  BlogPostList.vue  BlogPostsList.vue  CreatePostPanel.vue  LoginPanel.vue  LogoutButton.vue  RegisterPanel.vue
frontend/src/router/: index.js
frontend/src/stores/: posts.js  users.js
frontend/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
tests/: test_main.py
