[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Ali Elbashir <alielbashiir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
